# retail-lens

./: README.md  idea.md  index.html  main.py  package-lock.json  pyproject.toml  vite.config.js
.github/workflows/: infra-deploy.yml
api/app/: main.py
backend/: requirements.txt
infra/: main.tf  outputs.tf  variables.tf
mlops/: README.md
src/: App.css  App.jsx  index.css
src/components/: Analytics.css  Analytics.jsx  CameraFeed.css  CameraFeed.jsx  CommandCenter.css  CommandCenter.jsx  Dashboard.css  Dashboard.jsx  EventTicker.css  EventTicker.jsx  Inventory.css  Inventory.jsx  InventoryTable.css  InventoryTable.jsx  StaffMobileApp.css  StaffMobileApp.jsx  StoreLayout.css  StoreLayout.jsx  SystemSettings.css  SystemSettings.jsx  TaskDispatch.css  TaskDispatch.jsx
