[project]
name = "retail-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "azure-cognitiveservices-vision-customvision>=3.1.1",
    "azure-cosmos>=4.16.1",
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "uvicorn>=0.51.0",
]
